--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reduction app</title>
 </head>
 <body>
+<a href="http://localhost:8080/weights">Zapisany rejestr</a>
 
 </body>
 </html>
